# trt_resize

./: .clang-format  .gitignore  CMakeLists.txt  export_onnx_model.py  test_infer.py  test_infer_v2.py  test_plugin.py
sources/: srcnn3.onnx
src/: cuda_helper.hpp  trt_dynamic_resize.cpp  trt_dynamic_resize.hpp  trt_dynamic_resize_kernel.cu  trt_dynamic_resize_kernel.hpp  trt_plugin_base.hpp  trt_serialize.hpp
